<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnterpriseWifiSafeguard</string>
    <string name="hello_world">Hello world!</string>
    <string name="export">Export</string>
    <string name="fimport">Import</string>
    <string name="ssid">SSID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="anonymous">Anonymous Identity</string>
    <string name="cn">Servername in Certifikate (Common Name)</string>
    <string name="button">Configure</string>
    <string name="eap">EAP-Method</string>
    <string name="phase2">Phase 2 Method</string>
    <string name="cert">Root Certificate (CA)</string>

</resources>
