<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    tools:context="com.github.enterprisewifisafeguard.ui.MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssid" />

        <EditText
            android:id="@+id/fssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/fuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/text_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/fpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/text_ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymous" />

        <EditText
            android:id="@+id/fano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/text_cn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cn" />

        <EditText
            android:id="@+id/fcn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:ems="10" />

        <TextView
            android:id="@+id/text_eap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eap" />

        <Spinner
            android:id="@+id/feap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:entries="@array/eap_array"/>

        <TextView
            android:id="@+id/text_phase2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phase2" />

        <Spinner
            android:id="@+id/fphase2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:entries="@array/phase_array"/>
        

        <TextView
            android:id="@+id/text_ca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cert" />

        <Spinner
            android:id="@+id/fca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/config_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>



</ScrollView>
